--- a/templates/cekpotensikangker.html
+++ b/templates/cekpotensikangker.html
@@ -56,7 +56,7 @@
               name="{{ feature }}" required
               class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500"
             >
-              <option value="" disabled selected>bagaimana bentuk kuku?</option>
+              <option value="" disabled selected> Apakah bentuk kuku Anda membesar dan melengkung?</option>
               <option value="9">sangat</option>
               <option value="6">Ya</option>
               <option value="2">sedikit</option>
