--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
 				<input type="email" name="email" placeholder="Email" required />
 				<input type="password" name="pw" placeholder="Password" required />
 
-				<div>
+				<div style="display:none;">
 					<label>Role:</label>
 					<!-- izin make template From Uiverse.io by xyzswas --> 
 					<div name="isadmin" class="radio-group">
