--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -59,7 +59,7 @@
             text-decoration: none;
             text-transform: uppercase;
             background: linear-gradient(var(--fill-color) 0 100%) left / 0 no-repeat;
-            color: transparent;
+            //color: transparent;
             -webkit-text-stroke: 1px var(--fill-color);
             background-clip: text;
             transition: background-size 0.4s ease;
