--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -66,6 +66,7 @@
         }
 
         ul li a:hover {
+            color: transparent;
             background-size: 100%;
         }
     </style>
