--- a/templates/about.html
+++ b/templates/about.html
@@ -74,7 +74,10 @@
 <body>
     <div class="container">
         <h2>apa itu Dr. lappie</h2>
-        <p>{{ username }}</p>
+        <p>
+            Dr. lappie adalah website yang berfungsi sebagai pendeteksi kerusakan laptop bedasarkan keluhan pengguna 
+            yang didirikan oleh <a href="http://" target="_blank" rel="noopener noreferrer"></a>
+        </p>
         
     </div>
     {% with messages = get_flashed_messages() %}
