--- a/templates/about.html
+++ b/templates/about.html
@@ -76,7 +76,7 @@
         <h2>apa itu Dr. lappie</h2>
         <p>
             Dr. lappie adalah website yang berfungsi sebagai pendeteksi kerusakan laptop bedasarkan keluhan pengguna 
-            yang didirikan oleh <a href="http://" target="_blank" rel="noopener noreferrer"></a>
+            yang dikembangkan oleh <a href="https://www.linkedin.com/in/mahesa-putra-036528284/" target="_blank" rel="noopener noreferrer">Mahesa Putra Pinuntun</a>
         </p>
         
     </div>
