--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
         }
 
         .container {
-            text-align: center;
+            //text-align: center;
             max-width: 600px;
             width: 90%;
             background-color: rgba(255, 255, 255, 0.85);
