--- a/templates/about.html
+++ b/templates/about.html
@@ -75,10 +75,10 @@
     <div class="container">
         <h2>apa itu Dr. lappie</h2>
         <p>
-            Dr. lappie adalah website sistem pakar yang berfungsi sebagai pendeteksi kerusakan laptop bedasarkan keluhan pengguna 
-            
+            Dr. lappie adalah website sistem pakar yang berfungsi sebagai pendeteksi kerusakan laptop bedasarkan keluhan pengguna  
+
             <br>
-            yang dikembangkan oleh <a href="https://www.linkedin.com/in/mahesa-putra-036528284/" target="_blank" rel="noopener noreferrer">Mahesa Putra Pinuntun</a>
+            di desain dan dikembangkan oleh <a href="https://www.linkedin.com/in/mahesa-putra-036528284/" target="_blank" rel="noopener noreferrer">Mahesa Putra Pinuntun</a> sejak 20 februari 2025
         </p>
         
     </div>
