--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -82,7 +82,7 @@
             <li><a href="{{ url_for('edit_dataset') }}">Edit Dataset</a></li>
             <li><a href="{{ url_for('logout') }}">Logout</a></li>
             
-            <li><a href="{{ url_for('about') }}">About</a></li>
+            <li><a href="{{ url_for('about') }}">About Dr. Lappie</a></li>
         </ul>
     </div>
     {% with messages = get_flashed_messages() %}
