--- a/templates/about.html
+++ b/templates/about.html
@@ -83,6 +83,7 @@
             di desain dan dikembangkan oleh <a href="https://www.linkedin.com/in/mahesa-putra-036528284/" target="_blank" rel="noopener noreferrer">Mahesa Putra Pinuntun</a>
             <br>
             sejak 20 februari 2025
+            <h4><a href="{{ url_for('dashboard') }}" target="_blank" rel="noopener noreferrer">Kembali ke Dashboard Menu</a></h4>
         </p>
         
     </div>
