--- a/templates/about.html
+++ b/templates/about.html
@@ -83,8 +83,13 @@
             di desain dan dikembangkan oleh <a href="https://www.linkedin.com/in/mahesa-putra-036528284/" target="_blank" rel="noopener noreferrer">Mahesa Putra Pinuntun</a>
             <br>
             sejak 20 februari 2025
-            <h4><a href="{{ url_for('dashboard') }}" target="_blank" rel="noopener noreferrer">Kembali ke Dashboard Menu</a></h4>
+            
         </p>
+        <h4>
+            <a href="{{ url_for('dashboard') }}" rel="noopener noreferrer">Kembali ke Dashboard Menu
+
+            </a>
+        </h4>
         
     </div>
     {% with messages = get_flashed_messages() %}
