--- a/templates/smartphonelogin.html
+++ b/templates/smartphonelogin.html
@@ -173,9 +173,14 @@
     <div class="container">
         <form action="{{ url_for('login') }}" method="POST">
             <h1>Login</h1>
+            <div class="input-box underline">
+                <input type="text" name="username" placeholder="Username" required />
 
-            <input type="text" name="username" placeholder="Username" required />
-            <input type="password" name="pw" placeholder="Password" required />
+            </div>
+            <div class="input-box underline">
+                <input type="password" name="pw" placeholder="Password" required />
+
+            </div>
             <hr>
             <button type="submit">Login</button>
         </form>
