--- a/templates/smartphonelogin.html
+++ b/templates/smartphonelogin.html
@@ -182,7 +182,10 @@
 
             </div>
             <hr>
-            <button type="submit">Login</button>
+            <div class="input-box button">
+                
+                <button type="submit">Login</button>
+            </div>
         </form>
         <div class="option">or Connect With Social Media</div>
         <div class="twitter">
