--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -185,7 +185,7 @@
             <hr>
             <div class="input-box button">
                 
-                <button class="input-box button" type="submit">Login</button>
+                <button type="submit">Login</button>
             </div>
         </form>
         {% with messages = get_flashed_messages(with_categories=true) %}
