--- a/templates/smartphonelogin.html
+++ b/templates/smartphonelogin.html
@@ -171,9 +171,10 @@
         }
     </style>
     <div class="container">
-        <h2 style="text-align: center;">Dr.lappie</h2>
+        <h1 style="text-align: center;">Selamat datang di Dr.lappie</h1>
+        <hr>
         <form action="{{ url_for('login') }}" method="POST">
-            <h1>Login</h1>
+            <h3>Login</h3>
             <div class="input-box underline">
                 <input type="text" name="username" placeholder="Username" required />
 
@@ -182,6 +183,11 @@
                 <input type="password" name="pw" placeholder="Password" required />
 
             </div>
+            <hr>
+            
+            <hr>
+            
+            <hr>
             <hr>
             <div class="input-box button">
                 
