--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -172,31 +172,44 @@
     </style>
     <div class="container">
         <h2 style="text-align: center;">Dr.lappie</h2>
-        <form action="{{ url_for('login') }}" method="POST">
-            <h1>Login</h1>
+        <h4 style="text-align: center;">buat akun</h4>
+        <hr>
+        <form action="{{ url_for('register') }}" method="POST">
             <div class="input-box underline">
-                <input type="text" name="username" placeholder="Username" required />
 
+                <label for="username">Username:</label>
+
+                <input type="text" id="username" name="username" required><br><br>
             </div>
             <div class="input-box underline">
-                <input type="password" name="pw" placeholder="Password" required />
 
+                <label for="pw">Password:</label>
+                <input type="password" id="pw" name="pw" required><br><br>
             </div>
-            <hr>
+            <div class="input-box underline">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br><br>
+            </div>
+            <div class="input-box underline">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br><br>
+            </div>
+            <input type="submit" value="Register">
             <div class="input-box button">
                 
-                <button type="submit">Login</button>
+                <button class="input-box button" type="submit" value="Register">Login</button>
             </div>
         </form>
+        <hr>
         {% with messages = get_flashed_messages(with_categories=true) %}
-		{% if messages %}
-			<ul class="flashes">
-				{% for category, message in messages %}
-					<li class="{{ category }}">{{ message }}</li>
-				{% endfor %}
-			</ul>
-		{% endif %}
-	{% endwith %}
+        {% if messages %}
+        <ul class="flashes">
+            {% for category, message in messages %}
+            <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
     </div>
 </body>
 
