--- a/templates/smartphonelogin.html
+++ b/templates/smartphonelogin.html
@@ -194,7 +194,7 @@
                 <button class="input-box button" type="submit">Login</button>
             </div>
         </form>
-        <a href="{{url_for('register')}}" type=""></a>
+        <a href="{{url_for('register')}}" type="">Daftar Akun</a>
         <hr>
         {% with messages = get_flashed_messages(with_categories=true) %}
 		{% if messages %}
