--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -197,7 +197,7 @@
             <input type="submit" value="Register">
             <div class="input-box button">
                 
-                <button class="input-box button" type="submit" value="Register">Login</button>
+                <button class="input-box button" type="submit" value="Register">Daftarkan Akun</button>
             </div>
         </form>
         
