--- a/templates/smartphonelogin.html
+++ b/templates/smartphonelogin.html
@@ -171,7 +171,7 @@
         }
     </style>
     <div class="container">
-        <h1 style="text-align: center;">Selamat datang di Dr.lappie</h1>
+        <h1 style="text-align: center;">Selamat Datang di Dr.lappie</h1>
         <hr>
         <br>
 
