--- a/templates/smartphonelogin.html
+++ b/templates/smartphonelogin.html
@@ -195,7 +195,9 @@
             </div>
             <div>
                 <p>
-                belum punya akun? <a href="{{url_for('register')}}">Daftar Akun disini</a>
+                belum punya akun?
+                <br>
+                <a href="{{url_for('register')}}">Daftar Akun disini</a>
                 </p>
             </div>
 
