--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -205,9 +205,9 @@
         <br>
         <div>
             <p>
-                belum punya akun?
+                sudah punya akun?
                 <br>
-                <a href="{{url_for('register')}}">Daftar Akun disini</a>
+                <a href="{{url_for('login')}}">Masuk disini</a>
             </p>
         </div>
 
