--- a/templates/smartphonelogin.html
+++ b/templates/smartphonelogin.html
@@ -177,13 +177,14 @@
 
         <form action="{{ url_for('login') }}" method="POST">
             <h3>Login</h3>
-            <div class="input-box underline">
+            <div class="input-box">
                 <input type="text" name="username" placeholder="Username" required />
-
+                <div class="input-box underline"></div>
             </div>
-            <div class="input-box underline">
-                <input type="password" name="pw" placeholder="Password" required />
 
+            <div class="input-box">
+                <input type="password" name="pw" placeholder="Password" required />
+                <div class="input-box underline"></div>
             </div>
             <br>
             <br>
