--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -177,24 +177,36 @@
         <br>
         <br>
         <form action="{{ url_for('register') }}" method="POST">
-            <div class="input-box underline">
+            <div class="input-box">
 
                 <label for="username">Username:</label>
 
-                <input type="text" id="username" name="username" required><br><br>
+                <input type="text" id="username" name="username" required>
+                <div class="input-box">
+
+                </div><br><br>
             </div>
-            <div class="input-box underline">
+            <div class="input-box">
 
                 <label for="pw">Password:</label>
-                <input type="password" id="pw" name="pw" required><br><br>
+                <input type="password" id="pw" name="pw" required>
+                <div class="input-box underline">
+
+                </div><br><br>
             </div>
-            <div class="input-box underline">
+            <div class="input-box">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br><br>
+                <input type="text" id="name" name="name" required>
+                <div class="input-box underline">
+
+                </div><br><br>
             </div>
-            <div class="input-box underline">
+            <div class="input-box">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required><br><br>
+                <input type="email" id="email" name="email" required>
+                <div class="input-box underline">
+
+                </div><br><br>
             </div>
             <input type="submit" value="Register">
             <div class="input-box button">
