--- a/templates/smartphonelogin.html
+++ b/templates/smartphonelogin.html
@@ -177,14 +177,13 @@
 
         <form action="{{ url_for('login') }}" method="POST">
             <h3>Login</h3>
-            <div class="input-box">
+            <div class="input-box underline">
                 <input type="text" name="username" placeholder="Username" required />
-                <div class="input-box underline"></div>
-            </div>
 
-            <div class="input-box">
+            </div>
+            <div class="input-box underline">
                 <input type="password" name="pw" placeholder="Password" required />
-                <div class="input-box underline"></div>
+
             </div>
             <br>
             <br>
