--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -179,22 +179,19 @@
         <form action="{{ url_for('register') }}" method="POST">
             <div class="input-box underline">
 
-                <label for="username">Username:</label>
 
-                <input type="text" id="username" name="username" required><br><br>
+                <input type="text" id="username" placeholder="Username" name="username" required><br><br>
             </div>
             <div class="input-box underline">
 
-                <label for="pw">Password:</label>
-                <input type="password" id="pw" name="pw" required><br><br>
+                <input type="password" id="pw" name="pw" placeholder="Password key" required><br><br>
             </div>
             <div class="input-box underline">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br><br>
+                <input type="text" id="name" placeholder="Nama lengkap" name="name" required><br><br>
             </div>
             <div class="input-box underline">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required><br><br>
+                <input type="email" id="email" name="email" placeholder="email" required><br><br>
             </div>
             <input type="submit" value="Register">
             <div class="input-box button">
