--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -184,10 +184,9 @@
             </div>
             <div class="input-box underline">
 
-                <input type="password" id="pw" name="pw" placeholder="Password key" required><br><br>
+                <input type="password" id="pw" name="pw" placeholder="Kunci Password" required><br><br>
             </div>
             <div class="input-box underline">
-                <label for="name">Name:</label>
                 <input type="text" id="name" placeholder="Nama lengkap" name="name" required><br><br>
             </div>
             <div class="input-box underline">
