--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -178,23 +178,28 @@
         <br>
         <form action="{{ url_for('register') }}" method="POST">
             <div class="input-box underline">
-
-
-                <input type="text" id="username" placeholder="Username" name="username" required><br><br>
+                <input type="text" id="username" placeholder="Username" 
+                name="username" required><br><br>
             </div>
+
             <div class="input-box underline">
 
-                <input type="password" id="pw" name="pw" placeholder="Kunci Password" required><br><br>
+                <input type="password" id="pw" 
+                name="pw" placeholder="Kunci Password" required><br><br>
             </div>
+
             <div class="input-box underline">
-                <input type="text" id="name" placeholder="Nama lengkap" name="name" required><br><br>
+                <input type="text" id="name" placeholder="Nama lengkap" 
+                name="name" required><br><br>
             </div>
+
             <div class="input-box underline">
-                <input type="email" id="email" name="email" placeholder="email" required><br><br>
+                <input type="email" id="email" 
+                name="email" placeholder="email" required><br><br>
             </div>
             
 
-                <button class="input-box button" type="submit" value="Register">Daftarkan Akun</button>
+            <button class="input-box button" type="submit" value="Register">Daftarkan Akun</button>
             
         </form>
         <br>
