--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -178,29 +178,44 @@
         <br>
         <form action="{{ url_for('register') }}" method="POST">
             <div class="input-box underline">
-                <input type="text" id="username" placeholder="Username" 
-                name="username" required><br><br>
+                <input type="text" id="username" placeholder="Username" name="username" required><br><br>
             </div>
 
             <div class="input-box underline">
 
-                <input type="password" id="pw" 
-                name="pw" placeholder="Kunci Password" required><br><br>
+                <input type="password" id="pw" name="pw" placeholder="Kunci Password" required><br><br>
             </div>
 
             <div class="input-box underline">
-                <input type="text" id="name" placeholder="Nama lengkap" 
-                name="name" required><br><br>
+                <input type="text" id="name" placeholder="Nama lengkap" name="name" required><br><br>
             </div>
 
             <div class="input-box underline">
-                <input type="email" id="email" 
-                name="email" placeholder="email" required><br><br>
+                <input type="email" id="email" name="email" placeholder="email" required><br><br>
             </div>
-            
+
+            <div style="display:none;">
+                <label>Role:</label>
+                <!-- izin make template From Uiverse.io by xyzswas -->
+                <div name="isadmin" class="radio-group">
+                    <label class="liquid-radio">
+                        <input type="radio" name="isadmin" value="1" checked="" />
+                        <span class="radio-visual"></span>
+                        <span class="radio-label">Admin</span>
+                    </label>
+                    <label class="liquid-radio">
+                        <input type="radio" name="isadmin" value="0" checked="true" />
+                        <span class="radio-visual"></span>
+                        <span class="radio-label">User</span>
+                    </label>
+                </div>
+
+
+            </div>
+
 
             <button class="input-box button" type="submit" value="Register">Daftarkan Akun</button>
-            
+
         </form>
         <br>
         <div>
