--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -182,7 +182,6 @@
             </div>
 
             <div class="input-box underline">
-
                 <input type="password" id="pw" name="pw" placeholder="Kunci Password" required><br><br>
             </div>
 
@@ -214,7 +213,7 @@
             </div>
 
 
-            <button class="input-box button" type="submit" value="Register">Daftarkan Akun</button>
+            <button class="input-box button" type="submit">Daftarkan Akun</button>
 
         </form>
         <br>
