--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -176,35 +176,50 @@
         <hr>
         <br>
         <br>
-            <form action="{{ url_for('register') }}" method="POST">
-				<h1>Create Account</h1>
-				
-				<input type="text" name="name" placeholder="Name" required />
-				<input type="text" name="username" placeholder="Username" required />
-				<input type="email" name="email" placeholder="Email" required />
-				<input type="password" name="pw" placeholder="Password" required />
+        <form action="{{ url_for('register') }}" method="GET">
+            <div class="input-box underline">
+                <input type="text" id="username" placeholder="Username" 
+                name="username" required><br><br>
+            </div>
 
-				<div style="display:none;">
-					<label>Role:</label>
-					<!-- izin make template From Uiverse.io by xyzswas --> 
-					<div name="isadmin" class="radio-group">
-						<label class="liquid-radio">
-							<input type="radio" name="isadmin" value="1" checked="" />
-							<span class="radio-visual"></span>
-							<span class="radio-label">Admin</span>
-						</label>
-						<label class="liquid-radio">
-							<input type="radio" name="isadmin" value="0" checked="true" />
-							<span class="radio-visual"></span>
-							<span class="radio-label">User</span>
-						</label>
-					</div>
-						
+            <div class="input-box underline">
+                <input type="password" id="pw" 
+                name="pw" placeholder="Kunci Password" required><br><br>
+            </div>
 
-				</div>
-				<hr>
-				<button type="submit">Sign Up</button>
-			</form>
+            <div class="input-box underline">
+                <input type="text" id="name" placeholder="Nama lengkap" 
+                name="name" required><br><br>
+            </div>
+
+            <div class="input-box underline">
+                <input type="email" id="email" 
+                name="email" placeholder="email" required><br><br>
+            </div>
+
+            <div style="display:none;">
+                <label>Role:</label>
+                <!-- izin make template From Uiverse.io by xyzswas -->
+                <div name="isadmin" class="radio-group">
+                    <label class="liquid-radio">
+                        <input type="radio" name="isadmin" value="1" checked="" />
+                        <span class="radio-visual"></span>
+                        <span class="radio-label">Admin</span>
+                    </label>
+                    <label class="liquid-radio">
+                        <input type="radio" name="isadmin" value="0" checked="true" />
+                        <span class="radio-visual"></span>
+                        <span class="radio-label">User</span>
+                    </label>
+                </div>
+
+
+            </div>
+
+
+            <button class="input-box button" type="submit">Daftarkan Akun</button>
+
+        </form>
         <br>
         <div>
             <p>
