--- a/templates/smartphoneregister.html
+++ b/templates/smartphoneregister.html
@@ -176,7 +176,7 @@
         <hr>
         <br>
         <br>
-        <form action="{{ url_for('register') }}" method="GET">
+        <form action="{{ url_for('register') }}" method="POST">
             <div class="input-box underline">
                 <input type="text" id="username" placeholder="Username" 
                 name="username" required><br><br>
